# ai-operators

./: .clang-format  .gitignore  CMakeLists.txt  README.md  format.ps1  run_tests.sh
include/: element_wise.hh  vec_kernels.h  vec_kernels.hh
src/: vec_add_kernel.hu  vec_exp_kerbel.hu  vec_exp_kernel.hu  vec_kernels.hu  vec_softmax_kernel.hu
test/: CMakeLists.txt  vec_abs_host.cpp  vec_add_host.cpp  vec_div_host.cpp  vec_exp_host.cpp  vec_max_kernel.cpp  vec_min_kernel.cpp  vec_mul_host.cpp  vec_neg_host.cpp  vec_sqrt_host.cpp  vec_sub_host.cpp
